# mcclone

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
include/glad/: glad.h
includes/engine/: engine.hpp  glrenderer.hpp  prefixes.hpp  utils.hpp  window.hpp
includes/game/: entity.hpp
libs/linux/Jolt/: CMakeCache.txt  CTestTestfile.cmake  JoltConfig.cmake  Makefile  cmake_install.cmake
libs/linux/Jolt/Assets/Shaders/: TrianglePixelShader.frag.spv
scripts/: .build.sh.swp  build.sh  clean.sh  simple_build.sh
src/: .window.cpp.kate-swp  engine.cpp  glrenderer.cpp  main.cpp  window.cpp
src/engine/: engine.cpp  glad.c  utils.cpp
src/game/: entity.cpp
